# restaurant-service/src/main/java/com/restaurant/service/model/OrderEntityStatus.java
@@ -1,0 +1,7 @@
+package com.restaurant.service.model;
+
+public enum OrderEntityStatus {
+    AVAILABLE,
+    OCCUPIED,
+    BILL_PENDING
+}
